Полностью рабочий шаблон

--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint:fix": "eslint ./src --fix",
     "preview": "vite preview",
     "prepare": "husky",
-    "format": "prettier --write src/**/*.tsx"
+    "lint-staged": "lint-staged",
+    "format": "prettier --write src/**/*.{js,jsx,ts,tsx}"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -32,8 +34,13 @@
     "typescript": "^5.2.2",
     "vite": "^5.2.7"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "lint-staged": {
-    "*.js": [
+    "*.{js,jsx,ts,tsx}": [
       "npm run lint",
       "npm run format"
     ]
